<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoregistro1"
    tools:context=".Registrar">

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_rounded"
        android:fontFamily="@font/capriola"
        android:text="@string/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_AñadirContra" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/gafata"
        android:text="@string/tv_Registro"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Direccion"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#008258FA"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/et_Direccion"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_AñadirContra"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="380dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#008258FA"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/et_Contra"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Apellidos"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#008258FA"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/et_Apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_DireccionEspeci"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="260dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#008258FA"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/et_DireccionEspecifica"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_AñadirUsu"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="320dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#008258FA"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/et_Usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Nombre"
        android:layout_width="359dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#008258FA"
        android:drawablePadding="20dp"
        android:ems="10"
        android:fontFamily="@font/capriola"
        android:hint="@string/et_Nombres"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="20dp"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>