<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F4F4"
    tools:context=".ActivityCarrito">

    <EditText
        android:id="@+id/et_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/et_codigo"
        android:ems="10"
        android:hint="@string/et_codigo"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        tools:ignore="EditableContentDescCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:text="@string/et_nombre"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_codigo"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_descripcion"
        android:inputType="textPersonName"
        android:text="@string/et_descripcion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_precio"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion"
        app:layout_constraintVertical_bias="0.06"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="238dp"
        android:layout_height="49dp"
        android:backgroundTint="#009688"
        android:hint="@string/btn_buscar"
        android:onClick="Buscar"
        android:text="Buscar "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_agregar"
        app:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="238dp"
        android:layout_height="49dp"
        android:backgroundTint="#009688"
        android:hint="@string/btn_agregar"
        android:onClick="RegistrarZapato"
        android:text="Agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.644" />

    <Button
        android:id="@+id/btn_Eliminar"
        android:layout_width="238dp"
        android:layout_height="49dp"
        android:backgroundTint="#009688"
        android:hint="@string/btn_Eliminar"
        android:onClick="Eliminar"
        android:text="Eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar"
        app:layout_constraintVertical_bias="0.16" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="405dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/logo_sportline_negro" />
</androidx.constraintlayout.widget.ConstraintLayout>